--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
 			<version>5.1.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.11.2</version>
+		</dependency>
+
+
 		<!-- Validaciones -->
 		<dependency>
 			<groupId>javax.validation</groupId>
